[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ckb-talk-radar"
version = "0.1.0"
description = "Crawl recent Nervos Talk activity and generate AI-assisted community summaries."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["openai>=1.40.0"]

[tool.setuptools]
packages = ["ckb_talk_radar"]
